Align mock Golf live scoring contract (#72)
pool-master-eux.7
